--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^5.1.4
   cloud_firestore: ^5.2.1
   google_sign_in: ^6.2.1
+  font_awesome_flutter: ^10.7.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
